se reparo la vista del celular

--- a/index.html
+++ b/index.html
@@ -34,26 +34,29 @@
 
    <section class="jumbotron jumbotron-fluid text-center">
       <div class="container">
-         <img class="carita" src="img/carita.jpg" alt="carita">
+        
          <h1>Emmanuel Panesci</h1>
          <h4>Desarrollador Web</h4>
       </div>
    </section>
 
 
-   <section class="portfolio " id = "portfolio">
-      <div class="container">
+   <section class="portfolio  " id = "portfolio">
+      <div class="container  ">
          <h2 class="text-center ">Portfolio</h2>
          <hr>
         
-         <div class="row text-center">
-            <div class="col-lg-4 my-3">
+         <div class="row text-center ">
+            <div class="col-12 col-md-6 col-lg-4 my-3">
                <a  target="_blank" href="https://yahtzee-argentina.netlify.app/"><img src="img/Generala.jpg" alt=""></a>
             </div>
-            <div class="col-lg-4 my-3">
+            <div class="col-12 col-md-6 col-lg-4 my-3">
                <a  target="_blank" href="https://basic-chessboard.netlify.app/"><img src="img/chess.jpg" alt=""></a>
             </div>
-            <div class="col-lg-4 my-3">
+            <div class=" col-12 col-md-6 col-lg-4 my-3">
+               <a target="_blank" href="https://calcfat.netlify.app/"><img src="img/muscle.jpg" alt=""></a>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 my-3">
                <a  target="_blank" href="https://github.com/epanesci"><img src="img/github.jpg" alt=""></a>
             </div>
          </div>
