se mejoraron margenes

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
       </div>
    </section>
    
-   <section class="jumbotron" id = "acerca">
-      <div class="container text-center">
+   <section class="jumbotron px-2" id = "acerca">
+      <div class="container text-center ">
          <h2 >Acerca de mi</h2>
          <hr>
          <p class="lead w-75 mx-auto ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga aspernatur at provident quo laudantium aliquid nemo consequatur esse excepturi velit incidunt magni itaque beatae ullam, placeat sapiente, expedita deserunt maxime.</p>
@@ -73,8 +73,8 @@
       
    </section>
 
-   <section class = "contactame" id = "contacto">
-      <div class = "container">
+   <section class = "contactame " id = "contacto">
+      <div class = "container ">
          <h2 class="text-center">Contactame</h2>
          <hr>
          <form>
